<resources>
    <string name="app_name">Tibet Daily News</string>
    <string name="userNameOrEmail">Enter user name or email</string>
    <string name="login">Login</string>
    <string name="userPassword">Enter your password</string>
    <string name="tibetdailynews">TDN</string>
    <string name="title">The era of digital technology</string>
    <string name="time">12min</string>
    <string name="categoryName">Business</string>
    <string name="baseUrl">https://jsonplaceholder.typicode.com/</string>
    <string name="thereisnodata">There is no data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabHome">Home</string>
    <string name="tabOpinion">Opinion</string>
    <string name="tabPopular">Popular</string>
    <string name="titletext">Rosetta: Mission control confirms probes has \'crash landed\'</string>
    <string name="headerHourTextView">1 hour ago</string>
    <string name="headerCatText"><![CDATA[Science & Environment]]></string>
</resources>
