<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/headerImageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/flower"/>

        <TextView
            android:textSize="18dp"
            android:text="@string/titletext"
            android:id="@+id/headerTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:padding="10dp"
            android:weightSum="200"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:layout_weight="100"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/headerHourTextView"
                    android:id="@+id/headerTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout

                android:layout_weight="100"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:gravity="left"
                    android:layout_gravity="left"
                    android:id="@+id/headerCatTextView"
                    android:text="@string/headerCatText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>
