<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recyclerLayout">
    <android.support.v7.widget.CardView
        android:elevation="20dp"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:weightSum="250"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="left"
            android:layout_gravity="center_horizontal"
            android:layout_weight="100"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
             <ImageView
                 android:src="@drawable/flash"
                 android:id="@+id/featuredImage"
                 android:layout_width="match_parent"
                 android:layout_height="120dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="150"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="12dp"
                    android:text="@string/title"
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="left"
                    android:text="@string/categoryName"
                    android:id="@+id/catTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingRight="16dp"
                    android:gravity="right"
                    android:text="@string/time"
                    android:id="@+id/dateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
